--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,10 @@
 <resources>
     <string name="app_name">Android_Labs</string>
-    <string name="hello_message">Hello World11!</string>
-    <string name="Button">I\’m a button1</string>
-    <string name="toast_message">Here is more information1</string>
+    <string name="hello_message">Hello World - 1</string>
+    <string name="Button">INDIA</string>
+    <string name="toast_message">Here is more information - 1</string>
     <string name="GUI">Look at my GUI1</string>
-    <string name="check">Check this out!1</string>
-    <string name="Switch">Switch on / off1</string>
-    <string name="hint">Type here1</string>
+    <string name="check">Check this out - 1</string>
+    <string name="Switch">Switch on / off - 1</string>
+    <string name="hint">Type here</string>
 </resources>
